--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require": {
         "slim/slim": "^3.0",
         "oscarotero/psr7-middlewares": "^3.19",
-        "ngfw/recipe": "^1.2"
+        "ngfw/recipe": "^1.2",
+        "doctrine/orm": "^2.5"
     },
     "autoload": {
         "psr-4": {
